2004-12-08  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* Various changes for building against GCC 3.4.X
	
2004-04-08  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* Add CLAPACK sources to the distribution.
	
2004-04-04  Vivek Singh    <vsingh@bic.mni.mcgill.ca>

	* In TBSpline.cc changed iterating variables from unsigned
	to signed in the method bendingEnergy.  This is necessary
	to deal with possibility negative results when calculating
	index values.  The change appears to fix the incorrect bias field
	with N3 under IRIX and the 0 field estimates seen under linux.

2004-02-13  Bert Vincent   <bert@bic.mni.mcgill.ca>
	
	* In CachedArray.cc, uncommented bits that actually
	read/wrote/opened the cache file.  Also, fstream::open() requires
	the "trunc" attribute to be set in order to create a new file, as
	of GCC 3.0 and later.
	
	* Sadly, EBTKS now uses tempnam() so the annoying linker warning
	is back in some versions of GCC.  I promise to fix this someday...
	
2004-01-29  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* Include config.h in templates/MatrixSupport.cc so that the
	HAVE_MALLOC_H is defined!

	* Use explicit "C" linkage for isfinite()/finite() in SimpleArray.cc
	and SimpleArraySpec.cc
	
2004-01-19  Jason Lerch	   <jason@bic.mni.mcgill.ca>

	* added checks for values.h and malloc.h and changed the includes
	where necessary. This fixes a compilation problem on OS 10.3
	
2003-11-25  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* CVS TAG: EBTKS-1_1.
	
	* configure.ac: Set version to 1.1.

2003-11-21  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* templates/CachedArray.cc: Remove debugging statements
	erroneously left in code.

2003-11-14  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* configure.ac: Set version to 1.0.

	* templates/miscTemplateFunc.h: Qualify use of std:: identifiers.

	* templates/ValueMap.h: 
	* templates/Matrix.h: 
	* templates/Dictionary.h: 
	* templates/CachedArray.h: 
	* templates/Array.h: 
	* include/OpTimer.h: 
	* include/MPoint.h: 